# matchingsplit

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
matchingsplit/: __init__.py
subliment/: __init__.py
tests/: test_fix.py
