[project]
name = 'matchingsplit'
version = '0.1.2'
description = 'Split a string or group a collection of words into a list by matching another list of similar words, to create accurate subtitles from the actual script and inaccurate (generated) subtitles.'
readme = 'README.md'
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["fuzzy", "subtitles", "fixer", "words", "splitter"]
authors = [
  {name = "Arijit Basu", email = "sayanarijit@gmail.com" }
]
maintainers = [
  {name = "Arijit Basu", email = "sayanarijit@gmail.com" }
]
classifiers = [  # Optional
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Text Processing",

  # Pick your license as you wish
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "python_requires" below.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
    "thefuzz>=0.20",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[project.urls]
"Homepage" = "https://github.com/sayanarijit/matchingsplit"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
